added function to display data in database

--- a/StudentManagementSystem/OrabiSMSApp.csproj
+++ b/StudentManagementSystem/OrabiSMSApp.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SMS.Domain\SMS.Domain.csproj" />
+    <ProjectReference Include="..\SMS.Infrastructure\SMS.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
